Kubernetes/apps/api-app/01-svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: api-svc
  namespace: default
  labels:
    app: api-app
spec:
  selector:
    app: api-app
  ports:
    - name: http
      protocol: TCP
      port:  80
      targetPort: 80
